css/styles.css
/* ... */
@media only screen and (max-width: 800px) {
    .first__app__cta .first__app_btn {
        font-size: 1.5rem;
        font-weight: 400;
        height: auto;
    }
    .page-home .content-bottom {
        padding-top: 1rem;
    }
}
@media only screen and (max-width: 460px) {
    .use-item-section {
        margin-bottom: 0;
    }
    .use-feature-list li {
        line-height: 2.2rem;
    }
    .use-feature-list li:before {
        height: 2rem;
        width: 2rem;
    }
    .page-home .content-top-industry-list {
        flex-wrap: wrap;
        justify-content: space-around;
    }
    .page-home .content-top-industry-item {
        margin: 2rem 4rem;
    }
    .page-home .content-top-industry {
        max-width: 26rem;
        margin-left: auto;
        margin-right: auto;
        margin-bottom: 2rem;
    }
    .page-home .content-bottom .content-section-list {
        justify-content: space-around;
    }
    .page-home .content-bottom .content-section-item {
        margin-left: 2vw;
        margin-right: 2vw;
        margin-bottom: 3rem;
        width: 80vw;
        height: auto;
    }
    .page-home .content-bottom .content-section-title {
        margin-left: auto;
        margin-right: auto;
        width: 80vw;
    }
}
@media only screen and (max-width: 390px) {
    .first__app__cta {
        flex-direction: column;
    }
    .first__app__cta .first__app_btn {
        width: 100%;
    }
    .first__app__cta .first__app_btn:first-of-type {
        margin-right: 0;
    }
}
@media only screen and (max-width: 1125px) {
    .video__text {
        display: none;
    }
    .video__list {
        margin: 0 auto;
        width: 200px;
        padding-top: 20px;
        text-align: center;
    }
    .video__item {
        display: inline-block;
    }
    iframe {
        width: 100%;
    }
    .sticky-top{
        overflow-x:scroll;
    }
    .video__block h3 {
        display: none;
    }
    .video-list {
        display: none;
    }
}
@media only screen and (min-width: 1126px) {
    .customers__grid {
        -webkit-column-count: 2;
        -moz-column-count: 2;
        column-count: 2;
        max-width: 92rem;
    }
    .sticky-top{
        overflow-x:hidden;
    }
}

/* Utilities */
.visually-hidden { 
    position: absolute !important;
    height: 1px; 
    width: 1px;
    overflow: hidden;
    clip: rect(1px 1px 1px 1px); /* IE6, IE7 */
    clip: rect(1px, 1px, 1px, 1px);
    white-space: nowrap; /* added line */
}

